:octocat: yarn add -D parker
 On branch develop

 Changes to be committed:
	modified:   README.md
	modified:   package.json
	new file:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/t--takai/analyze-css.git",
+  "scripts": {
+    "parker": "parker",
+    "test": "curl http://www.katiefenn.co.uk/css/shuttle.css -s | parker -s",
+    "stop": "echo \"Error: no echo specified\" "
+  },
   "author": "tomonari takai <takai01010100@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "parker": "^0.0.10"
+  }
 }
