--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "stylestats": "stylestats -p",
     "parker": "parker",
+    "analyze-css": "analyze-css --pretty --file",
     "list-selectors": "list-selectors",
     "test": "parker node_modules/normalize.css/normalize.css",
     "stop": "echo \"Error: no echo specified\" "
@@ -13,6 +14,7 @@
   "author": "tomonari takai <takai01010100@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "analyze-css": "^0.12.5",
     "list-selectors": "^2.0.0",
     "normalize.css": "^8.0.0",
     "parker": "^0.0.10",
