--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "stylestats": "stylestats -p",
     "parker": "parker",
+    "csss": "csss --files",
     "analyze-css": "analyze-css --pretty --file",
     "list-selectors": "list-selectors",
     "test": "parker node_modules/normalize.css/normalize.css",
@@ -15,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "analyze-css": "^0.12.5",
+    "csss": "^1.1.1",
     "list-selectors": "^2.0.0",
     "normalize.css": "^8.0.0",
     "parker": "^0.0.10",
