:tada: :tada: :tada: :octocat: yarn add -D stylelint
 On branch develop

 Changes to be committed:
	modified:   README.md
	modified:   docs/test_result.md
	modified:   package.json
	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -6,12 +6,28 @@
   "scripts": {
     "stylestats": "stylestats --prettify --format json",
     "parker": "parker",
+    "stylelint": "stylelint",
     "csslint": "csslint --errors=empty-rules,regex-selectors,fallback-colors,display-property-grouping,vendor-prefix",
     "csss": "csss --files",
     "analyze-css": "analyze-css --pretty --file",
     "list-selectors": "list-selectors",
     "test": "parker node_modules/normalize.css/normalize.css",
     "stop": "echo \"Error: no echo specified\" "
+  },
+  "stylelint": {
+    "rules": {
+      "no-duplicate-selectors": true,
+      "no-empty-source": true,
+      "block-no-empty": true,
+      "property-no-unknown": true,
+      "selector-type-no-unknown": true,
+      "selector-pseudo-element-no-unknown": true,
+      "comment-no-empty": true,
+      "no-eol-whitespace": true,
+      "function-max-empty-lines": 2,
+      "max-empty-lines": 2,
+      "no-missing-end-of-source-newline": true
+    }
   },
   "author": "tomonari takai <takai01010100@gmail.com>",
   "license": "MIT",
@@ -22,6 +38,7 @@
     "list-selectors": "^2.0.0",
     "normalize.css": "^8.0.0",
     "parker": "^0.0.10",
+    "stylelint": "^8.4.0",
     "stylestats": "^7.0.1"
   }
 }
